# fleet

./: Cargo.toml  README.md  Trunk.toml  index.html  index.scss
src/: lib.rs  main.rs
src/components/: mod.rs
src/components/cell/: mod.rs  nav_element.rs  text_input.rs
src/components/organs/: navbar.rs
src/components/tissues/: auth_form.rs  form.rs  mod.rs  nav_list.rs  new_account.rs
src/pages/: about.rs  account.rs  create.rs  home.rs  login.rs  mod.rs  page_not_found.rs
src/stores/: account_info.rs  authstore.rs  mod.rs
