[package]
name = "fleet"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
# repository = "https://github.com/yewstack/yew-trunk-minimal-template"
# license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
enum-display-derive = "0.1.1"
serde = "1.0.152"
serde_json = "1.0.91"
stylist = { version = "0.12.0", features=["yew"] }
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61" }
yew = { version="0.20", features=["csr"] }
yew-router = "0.17"
yewdux = "0.9.0"
courier = { path = "../courier"}